# asurdev-workspace-backup-20260326

./: .backup_marker  .gitignore  =0.2.0  As  Election_Samara_2026-05-03.md  MikroTik_hEX_S_E60iUGS_Гайд_первое_включение.md  archive_asurdev.py  as  asurd  mikula_best_methods_trend_lines.txt  muhurtha.md  spravochnik_domov_goroskopa.txt  test_confidence_normalization.py
astrofin/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
astrofin-sentinel/: .env.example  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
astrofin-sentinel/03_orchestration/: graph.py  state.py
astrofin-sentinel/agents/: __init__.py  agent_registry.py  astro_advisor.py  astro_agent_instructions.md  astro_council.py  base.py  cycle_agent.py  directional_agents.py  langchain_agents.py  langgraph_agent.py  market_analyst_instructions.md  orchestrator.py  risk_agent.py  synthesis_engine.py  synthesizer_instructions.md  technical_analyst.py
astrofin-sentinel/api/: webhook.py
astrofin-sentinel/contracts/: sentinel_state.py
astrofin-sentinel/core/: __init__.py  config.py  database.py
astrofin-sentinel/data/: market_data_provider.py
astrofin-sentinel/examples/: redis_usage_examples.py
astrofin-sentinel/llm/: ollama_client.py
astrofin-sentinel/orchestration/: __init__.py  ephemeris_node.py  langgraph_orchestrator.py
astrofin-sentinel/rag/: indexer.py  tools.py
astrofin-sentinel/repositories/: __init__.py  alert_repository.py
astrofin-sentinel/services/: __init__.py  notification_service.py
astrofin-sentinel/src/: main.py  types.py
astrofin-sentinel/tests/: test_graph.py  test_rag_nodes.py
astrofin-sentinel/tools/: __init__.py  langchain_tools.py
astrofin/backend/: __init__.py  age  logging_config.py  mai  main.py
astrofin/docker/: agent_sandbox.Dockerfile  requirements-sandbox.txt
astrofin/scripts/: index_vault.py
asurdev/: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  METODIKA.md  MIGRATION_ASTROFIN.md  README.md  ask_horary.py  astro_agents.py  bot.py  cli.py  core.py  doc  docker-compose.yml  ephemeris_calculator.py  forecast_2026_03_22.py  manjasi_forecast_2026_03_23.py  march_2026_ephemeris.json  muhurta_search.py  orchestrator.py  pyproject.toml  requirements-visualizations.txt  requirements.txt  run.py  swiss_ephemeris_api.py  test_astro_council.py  test_horary.py  test_langsmith.py
asurdev/_core/: README.md  __init__.py  agents.py  api.py  types.py
asurdev/agents/: __init__.py  __main__.py  indian_astro.py  langgraph_orchestrator.py  langsmith_tracer.py  llm_factory.py  orchestrator.py  registry.py  state.py  types.py
asurdev/andrews/: __init__.py  agent.py  pitchfork.py
asurdev/api/: main.py
asurdev/astrology/: __init__.py  core.py  houses.py  vedic.py  western.py
asurdev/cache/: redis_cache.py
asurdev/config/: settings.py  system_prompts.py
asurdev/core/: SYSTEM_PROMPT_v3.2.md  __init__.py  config.py  decorators.py  exceptions.py  logging_config.py
asurdev/docs/: AGENTS.md  EDGE_INTEGRATION.md  EVAL  HOW_IT_WORKS.md  INSTALL.md  INTEGRATION_GUIDE.md  LANGCHAIN_MIGRATION.md  LOGSEQ_RAG.md  POP_OS_SETUP.md  QUICKSTART.md  RATIONALE.md  REACT_UI.md  README.md  SECURITY.md  SMC.md  WSL_SETUP.md  christian-astrology-lilly-zettelkasten.md  horary-electional-astrology-frawley-zettelkasten.md  house-characteristics-zettelkasten.md  house-formulas-munkasey.md  synastry-compatibility-zettelkasten.md
asurdev/dow/: __init__.py  agent.py  (+1 more)
(+972 files in other folders)
