[project]
name = "astrofin-sentinel"
version = "0.1.0"
description = "Multi-agent trading assistant with astrology"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "swisseph>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]
